text align correctio

--- a/style.css
+++ b/style.css
@@ -111,17 +111,17 @@ button {
   margin: 20px;
 }
 
-.donate-plan-item.one{
-  background-color: #EDF5F6;
+.donate-plan-item.one {
+  background-color: #edf5f6;
 }
-.donate-plan-item.two{
-  background-color: #FFEEEE;
+.donate-plan-item.two {
+  background-color: #ffeeee;
 }
-.donate-plan-item.three{
-  background-color: #FFF4D6;
+.donate-plan-item.three {
+  background-color: #fff4d6;
 }
 
-.donate-plan-item p{
+.donate-plan-item p {
   font-size: 1rem;
 }
 
@@ -134,8 +134,8 @@ button {
 
 /* Scenario area CSS */
 
-.half-container{
-  display: flex ;
+.half-container {
+  display: flex;
   flex-direction: row;
   align-items: left;
   text-align: justify;
@@ -144,66 +144,64 @@ button {
   margin: 50px 0;
 }
 
-.half-items{
+.half-items {
   width: 45%;
   padding: 2%;
   display: block;
 }
 
-.half-items p{
+.half-items p {
   text-align: justify;
 }
 
-.half-items img{
+.half-items img {
   width: 100%;
   height: 35vh;
 }
-.contribute-btn{
+.contribute-btn {
   width: 150px;
   margin: 20px 0;
-
 }
 /* Feedback Section  */
 
-section h3{
+section h3 {
   text-align: center;
 }
 
-section p{
+section p {
   text-align: center;
 }
 
-.news-letter{
+.news-letter {
   text-align: center;
-  background-color: #FFF4D6;
+  background-color: #fff4d6;
   height: 200px;
   line-height: 200px;
   border-radius: 5px;
   margin: 40px 0;
 }
 
-.news-letter input{
+.news-letter input {
   border: none;
   border-radius: 5px;
   height: 48px;
   padding: 0px 5px;
-  
 }
 
-.sub-btn{
+.sub-btn {
   margin: 0;
 }
 
-footer{
+footer {
   text-align: center;
-  color: #EDF5F6;
-  background-color: #0B0D17;
-  height: 75px; 
+  color: #edf5f6;
+  background-color: #0b0d17;
+  height: 75px;
   padding-top: 40px;
 }
 
-footer h4{
-  color: #FF5959;
+footer h4 {
+  color: #ff5959;
   font-weight: 900;
   font-size: 25px;
   font-style: italic;
